--- a/package.json
+++ b/package.json
@@ -3,15 +3,16 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "serve": "vue-cli-service serve",
+        "serve": "json-server --watch db.json serve",
+        "dev": "vue-cli-service serve",
         "build": "vue-cli-service build"
     },
     "dependencies": {
         "@babel/polyfill": "^7.4.4",
         "@mdi/font": "^5.9.55",
+        "axios": "^0.21.1",
         "core-js": "^3.6.5",
         "material-design-icons-iconfont": "^6.1.0",
-
         "vue": "^2.6.11",
         "vue-router": "^3.2.0",
         "vuetify": "^2.4.0",
@@ -21,8 +22,7 @@
         "@vue/cli-plugin-babel": "~4.5.0",
         "@vue/cli-plugin-router": "~4.5.0",
         "@vue/cli-plugin-vuex": "~4.5.0",
-        "@vue/cli-service": "^3.12.1",
-
+        "@vue/cli-service": "^4.5.13",
         "vue-cli-plugin-vuetify": "^2.4.1",
         "vue-template-compiler": "^2.6.11"
     },
